--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 management.endpoints.web.exposure.include=*
 management.info.env.enabled=true
 
+# Exclude individual endpoint
+#management.endpoints.web.exposure.exclude=health,info
+
 info.app.name=This is the app
 info.app.description=This app is cool
 info.app.version=1.0.2
