05-changing-spring-config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,19 @@ management.info.env.enabled=true
 info.app.name=This is the app
 info.app.description=This app is cool
 info.app.version=1.0.2
+
+#
+# Define my properties
+#
+coach.name=Mickey mouse
+team.name=The mouse club
+
+#
+# Change spring boot default port
+#
+server.port=7070
+
+#
+# Set context path for the application
+#
+server.servlet.context-path=/mycoolapp
